# kernel-heatmap

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  run.py  testbench.cpp  testbench.h  utility_func.cu  utility_func.cuh  utility_host.hpp
dataproc/: heatMap.py
kcf/: complexmat.cu  complexmat.cuh  cuda_error_check.hpp
